name:                urlShortener
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/xiongchenyu6/urlShortener#readme
license:             BSD3
license-file:        LICENSE
author:              xiongchenyu6
maintainer:          xiongchenyu6@gmail.com
copyright:           2018 xiongchenyu6
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.org

executable urlShortener
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                      ,bytestring
                      ,hedis
                      ,mtl
                      ,network-uri
                      ,random
                      ,scotty
                      ,semigroups
                      ,text
                      ,transformers
